--- a/indi_allsky/flask/templates/mini_generate.html
+++ b/indi_allsky/flask/templates/mini_generate.html
@@ -28,6 +28,7 @@ canvas {
 <script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/settings_loop.js') }}"></script>
 <script type="text/javascript">
 var img;
+var draw = true;
 var camera_id = {{ camera_id }};
 var timestamp = {{ timestamp | int }};
 var endDate_timestamp;  // set later
@@ -56,6 +57,13 @@ function init() {
 
     img = new Image();
     img.onload = function() {
+        if (!draw) {
+            return;
+        }
+
+        // block downloading new images
+        draw = false;
+
         canvas.setAttribute("width", window.innerWidth);
         canvas.setAttribute("height", window.innerHeight);
 
@@ -69,6 +77,8 @@ function init() {
         context.drawImage(this, 0, 0, this.width, this.height,
             centerShift_x, centerShift_y, this.width * ratio, this.height * ratio);
 
+        // allow new images to be loaded
+        draw = true;
     };
 
 
@@ -97,7 +107,6 @@ async function loop() {
 
 function showImage(entry, idx) {
     console.log('Showing image ' + entry["url"]);
-
     img.src = entry["url"];
 }
 
