--- a/indi_allsky/flask/templates/mini_generate.html
+++ b/indi_allsky/flask/templates/mini_generate.html
@@ -27,8 +27,7 @@ canvas {
 </style>
 <script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/settings_loop.js') }}"></script>
 <script type="text/javascript">
-var img;
-var draw = true;
+//var img;
 var camera_id = {{ camera_id }};
 var timestamp = {{ timestamp | int }};
 var endDate_timestamp;  // set later
@@ -52,10 +51,35 @@ var framerate_delay_lut = {
 };
 
 function init() {
+    loadImages();
+    loop();
+}
+
+async function loop() {
+    console.log('Starting loop');
+
+    while(json_data['image_list'].length == 0) {
+        await sleep(100);
+    }
+
+    // prevent concurrent updates to list
+    var image_list_copy = JSON.parse(JSON.stringify(json_data['image_list']));
+
+    for (var i = image_list_copy.length - 1; i >= 0; i--) {
+        showImage(image_list_copy[i], i);
+        await sleep(framerate_delay_lut[framerate]);
+    };
+
+    setTimeout(loop, 3000);
+}
+
+
+function showImage(entry, idx) {
     var canvas = document.getElementById("canvas");
     var context = canvas.getContext("2d");
 
-    img = new Image();
+    // Need separate Image for every image of the loop, otherwise browser will not load properly
+    var img = new Image();
     img.onload = function() {
         if (!draw) {
             return;
@@ -82,30 +106,6 @@ function init() {
     };
 
 
-    loadImages();
-    loop();
-}
-
-async function loop() {
-    console.log('Starting loop');
-
-    while(json_data['image_list'].length == 0) {
-        await sleep(100);
-    }
-
-    // prevent concurrent updates to list
-    var image_list_copy = JSON.parse(JSON.stringify(json_data['image_list']));
-
-    for (var i = image_list_copy.length - 1; i >= 0; i--) {
-        showImage(image_list_copy[i], i);
-        await sleep(framerate_delay_lut[framerate]);
-    };
-
-    setTimeout(loop, 3000);
-}
-
-
-function showImage(entry, idx) {
     console.log('Showing image ' + entry["url"]);
     img.src = entry["url"];
 }
