--- a/indi_allsky/flask/templates/loop.html
+++ b/indi_allsky/flask/templates/loop.html
@@ -27,7 +27,6 @@ canvas {
 </style>
 <script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/settings_loop.js') }}"></script>
 <script type="text/javascript">
-//var img;
 var camera_id = {{ camera_id }};
 var refreshInterval = {{ refreshInterval | int }};
 var loadCountdown = 0;  // load immediately
@@ -56,47 +55,51 @@ async function loop() {
         await sleep(100);
     }
 
-    // prevent concurrent updates to list
-    var image_list_copy = JSON.parse(JSON.stringify(json_data['image_list']));
+
+    var canvas = document.getElementById("canvas");
+    var context = canvas.getContext("2d");
+
+    // Need separate Image for every image of the loop, otherwise browser will not load properly
+    var image_list = [];
+    for (var i = 0; i < json_data['image_list'].length; i++) {
+        var img = new Image();
+        img.onload = function() {
+            canvas.setAttribute("width", window.innerWidth);
+            canvas.setAttribute("height", window.innerHeight);
+
+            var hRatio = canvas.width  / this.width;
+            var vRatio = canvas.height / this.height;
+            var ratio  = Math.min ( hRatio, vRatio );
+            var centerShift_x = ( canvas.width - this.width * ratio ) / 2;
+            var centerShift_y = ( canvas.height - this.height * ratio ) / 2;
+
+            //context.imageSmoothingEnabled = false;
+            context.drawImage(this, 0, 0, this.width, this.height,
+                centerShift_x, centerShift_y, this.width * ratio, this.height * ratio);
+        };
+
+        image_list.push(img);
+    }
+
 
     if (rock) {
-        for (var i = 0; i < image_list_copy.length; i++) {
-            showImage(image_list_copy[i], i);
+        for (var i = 0; i < image_list.length; i++) {
+            showImage(image_list[i], json_data['image_list'][i]);
             await sleep(frame_delay_ms);
         };
     };
 
-    for (var i = image_list_copy.length - 1; i >= 0; i--) {
-        showImage(image_list_copy[i], i);
+    for (var i = image_list.length - 1; i >= 0; i--) {
+        showImage(image_list[i], json_data['image_list'][i]);
         await sleep(frame_delay_ms);
     };
+
 
     setTimeout(loop, 3000);
 }
 
 
-function showImage(entry, idx) {
-    var canvas = document.getElementById("canvas");
-    var context = canvas.getContext("2d");
-
-    // Need separate Image for every image of the loop, otherwise browser will not load properly
-    var img = new Image();
-    img.onload = function() {
-        canvas.setAttribute("width", window.innerWidth);
-        canvas.setAttribute("height", window.innerHeight);
-
-        var hRatio = canvas.width  / this.width;
-        var vRatio = canvas.height / this.height;
-        var ratio  = Math.min ( hRatio, vRatio );
-        var centerShift_x = ( canvas.width - this.width * ratio ) / 2;
-        var centerShift_y = ( canvas.height - this.height * ratio ) / 2;
-
-        //context.imageSmoothingEnabled = false;
-        context.drawImage(this, 0, 0, this.width, this.height,
-            centerShift_x, centerShift_y, this.width * ratio, this.height * ratio);
-    };
-
-
+function showImage(img, entry) {
     console.log('Showing image ' + entry["url"]);
     img.src = entry["url"];
 }
