--- a/indi_allsky/flask/templates/index_img.html
+++ b/indi_allsky/flask/templates/index_img.html
@@ -33,30 +33,35 @@ function init() {
 
 async function loop() {
     //console.log('Starting loop');
-
     while(json_data['latest_image']['url'] == null) {
         await sleep(100);
     }
 
-    showImage(json_data['latest_image']);
+
+    var img = new Image();
+    img.onload = function() {
+        var hRatio = window.innerWidth / json_data['latest_image']["width"];
+        var vRatio = window.innerHeight / json_data['latest_image']["height"];
+        var ratio  = Math.min ( hRatio, vRatio );
+
+
+        $('#latest-image').attr({
+            'src': this.src,
+            'width': (json_data['latest_image']["width"] * ratio) * 0.95,
+            'height': (json_data['latest_image']["height"] * ratio) * 0.95
+        });
+    };
+
+
+    showImage(img, json_data['latest_image']);
 
     setTimeout(loop, refreshInterval);
 }
 
 
-function showImage(entry) {
+function showImage(img, entry) {
     console.log('Showing image ' + entry["url"]);
-
-    var hRatio = window.innerWidth / entry["width"];
-    var vRatio = window.innerHeight / entry["height"];
-    var ratio  = Math.min ( hRatio, vRatio );
-
-
-    $('#latest-image').attr({
-        'src': entry["url"],
-        'width': (entry["width"] * ratio) * 0.95,
-        'height': (entry["height"] * ratio) * 0.95
-    });
+    img.src = entry["url"];
 }
 
 
