move image object creation to showImage()

--- a/indi_allsky/flask/templates/loop.html
+++ b/indi_allsky/flask/templates/loop.html
@@ -60,41 +60,15 @@ async function loop() {
     var image_list_copy = JSON.parse(JSON.stringify(json_data['image_list']));
 
 
-    var canvas = document.getElementById("canvas");
-    var context = canvas.getContext("2d");
-
-    // Need separate Image for every image of the loop, otherwise browser will not load properly
-    var img_list = [];
-    for (var i = 0; i < image_list_copy.length; i++) {
-        var img = new Image();
-        img.onload = function() {
-            canvas.setAttribute("width", window.innerWidth);
-            canvas.setAttribute("height", window.innerHeight);
-
-            var hRatio = canvas.width  / this.width;
-            var vRatio = canvas.height / this.height;
-            var ratio  = Math.min ( hRatio, vRatio );
-            var centerShift_x = ( canvas.width - this.width * ratio ) / 2;
-            var centerShift_y = ( canvas.height - this.height * ratio ) / 2;
-
-            //context.imageSmoothingEnabled = false;
-            context.drawImage(this, 0, 0, this.width, this.height,
-                centerShift_x, centerShift_y, this.width * ratio, this.height * ratio);
-        };
-
-        img_list.push(img);
-    }
-
-
     if (rock) {
-        for (var i = 0; i < img_list.length; i++) {
-            showImage(img_list[i], image_list_copy[i]);
+        for (var i = 0; i < image_list_copy.length; i++) {
+            showImage(image_list_copy[i]);
             await sleep(frame_delay_ms);
         };
     };
 
-    for (var i = img_list.length - 1; i >= 0; i--) {
-        showImage(img_list[i], image_list_copy[i]);
+    for (var i = image_list_copy.length - 1; i >= 0; i--) {
+        showImage(image_list_copy[i]);
         await sleep(frame_delay_ms);
     };
 
@@ -103,8 +77,30 @@ async function loop() {
 }
 
 
-function showImage(img, entry) {
+function showImage(entry) {
     console.log('Showing image ' + entry["url"]);
+
+    // Need separate Image for every image of the loop, otherwise browser will not load properly
+    var canvas = document.getElementById("canvas");
+    var context = canvas.getContext("2d");
+
+    var img = new Image();
+    img.onload = function() {
+        canvas.setAttribute("width", window.innerWidth);
+        canvas.setAttribute("height", window.innerHeight);
+
+        var hRatio = canvas.width  / this.width;
+        var vRatio = canvas.height / this.height;
+        var ratio  = Math.min ( hRatio, vRatio );
+        var centerShift_x = ( canvas.width - this.width * ratio ) / 2;
+        var centerShift_y = ( canvas.height - this.height * ratio ) / 2;
+
+        //context.imageSmoothingEnabled = false;
+        context.drawImage(this, 0, 0, this.width, this.height,
+            centerShift_x, centerShift_y, this.width * ratio, this.height * ratio);
+    };
+
+
     img.src = entry["url"];
 }
 
