--- a/indi_allsky/flask/templates/mini_generate.html
+++ b/indi_allsky/flask/templates/mini_generate.html
@@ -27,6 +27,7 @@ canvas {
 </style>
 <script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/settings_loop.js') }}"></script>
 <script type="text/javascript">
+var img;
 var camera_id = {{ camera_id }};
 var timestamp = {{ timestamp | int }};
 var endDate_timestamp;  // set later
@@ -66,35 +67,8 @@ async function loop() {
     var image_list_copy = JSON.parse(JSON.stringify(json_data['image_list']));
 
 
-    var canvas = document.getElementById("canvas");
-    var context = canvas.getContext("2d");
-
-    // Need separate Image for every image of the loop, otherwise browser will not load properly
-    var img_list = [];
-    for (var i = 0; i < image_list_copy.length; i++) {
-        var img = new Image();
-        img.onload = function() {
-            canvas.setAttribute("width", window.innerWidth);
-            canvas.setAttribute("height", window.innerHeight);
-
-            var hRatio = canvas.width  / this.width;
-            var vRatio = canvas.height / this.height;
-            var ratio  = Math.min ( hRatio, vRatio );
-            var centerShift_x = ( canvas.width - this.width * ratio ) / 2;
-            var centerShift_y = ( canvas.height - this.height * ratio ) / 2;
-
-            //context.imageSmoothingEnabled = false;
-            context.drawImage(this, 0, 0, this.width, this.height,
-                centerShift_x, centerShift_y, this.width * ratio, this.height * ratio);
-        };
-
-        img_list.push(img);
-    }
-
-
-
-    for (var i = img_list.length - 1; i >= 0; i--) {
-        showImage(img_list[i], image_list_copy[i]);
+    for (var i = image_list_copy.length - 1; i >= 0; i--) {
+        showImage(image_list_copy[i]);
         await sleep(framerate_delay_lut[framerate]);
     };
 
@@ -102,8 +76,29 @@ async function loop() {
 }
 
 
-function showImage(img, entry) {
+function showImage(entry) {
     console.log('Showing image ' + entry["url"]);
+
+    var canvas = document.getElementById("canvas");
+    var context = canvas.getContext("2d");
+
+    img = new Image();
+    img.onload = function() {
+        canvas.setAttribute("width", window.innerWidth);
+        canvas.setAttribute("height", window.innerHeight);
+
+        var hRatio = canvas.width  / this.width;
+        var vRatio = canvas.height / this.height;
+        var ratio  = Math.min ( hRatio, vRatio );
+        var centerShift_x = ( canvas.width - this.width * ratio ) / 2;
+        var centerShift_y = ( canvas.height - this.height * ratio ) / 2;
+
+        //context.imageSmoothingEnabled = false;
+        context.drawImage(this, 0, 0, this.width, this.height,
+            centerShift_x, centerShift_y, this.width * ratio, this.height * ratio);
+    };
+
+
     img.src = entry["url"];
 }
 
