--- a/indi_allsky/flask/templates/index.html
+++ b/indi_allsky/flask/templates/index.html
@@ -12,7 +12,6 @@ canvas {
 </style>
 <script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/settings_latest.js') }}"></script>
 <script type="text/javascript">
-var img;
 var json_data = {
     'latest_image' : {
         'url' : null,
@@ -27,10 +26,32 @@ var fullscreen = false;  //initial state
 
 
 function init() {
+    loadNextImage();
+    loop();
+}
+
+
+async function loop() {
+    //console.log('Starting loop');
+
+    while(json_data['latest_image']['url'] == null) {
+        await sleep(100);
+    }
+
+
+    showImage(json_data['latest_image']);
+
+    setTimeout(loop, refreshInterval);
+}
+
+
+function showImage(entry) {
+    console.log('Showing image ' + entry["url"]);
+
     var canvas = document.getElementById("canvas");
     var context = canvas.getContext("2d");
 
-    img = new Image();
+    var img = new Image();
     img.onload = function() {
         canvas.setAttribute("width", window.innerWidth);
         canvas.setAttribute("height", window.innerHeight);
@@ -51,26 +72,7 @@ function init() {
 
     };
 
-    loadNextImage();
-    loop();
-}
 
-
-async function loop() {
-    //console.log('Starting loop');
-
-    while(json_data['latest_image']['url'] == null) {
-        await sleep(100);
-    }
-
-    showImage(json_data['latest_image']);
-
-    setTimeout(loop, refreshInterval);
-}
-
-
-function showImage(entry) {
-    console.log('Showing image ' + entry["url"]);
     img.src = entry["url"];
 }
 
