--- a/indi_allsky/flask/templates/imageviewer.html
+++ b/indi_allsky/flask/templates/imageviewer.html
@@ -50,7 +50,7 @@ function setResizeHandler(callback, timeout) {
 }
 
 function resize_callback() {
-    //img.src = fields['IMG_SELECT'].input.val();
+    img.src = fields['IMG_SELECT'].input.val();
 }
 setResizeHandler(resize_callback, 200);
 
