--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2725,6 +2725,7 @@ var camera_id = {{ camera_id }};
             <div id="DETECT_MASK-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-5">
+            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Detection-Masks" class="text-decoration-none link-info" target="_blank">Detection Mask Wiki</a></div>
             <div>Image mask file for detection area.  Must be a PNG</div>
         </div>
     </div>
