--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3132,6 +3132,19 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.REALTIME_KEOGRAM__LABEL.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.REALTIME_KEOGRAM__LABEL(class='form-check-input') }}
+                <div id="REALTIME_KEOGRAM__LABEL-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">Add keogram time labels</div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -7637,6 +7650,7 @@ const checkbox_field_names = [
     'IMAGE_STRETCH__MOONMODE',
     'IMAGE_STRETCH__DAYTIME',
     'KEOGRAM_LABEL',
+    'REALTIME_KEOGRAM__LABEL',
     'LONGTERM_KEOGRAM__ENABLE',
     'STARTRAILS_MOONMODE_THOLD',
     'STARTRAILS_USE_DB_DATA',
