--- a/indi_allsky/flask/templates/imageprocessing.html
+++ b/indi_allsky/flask/templates/imageprocessing.html
@@ -1292,6 +1292,17 @@ var fullscreen = false;  //initial state
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_image_processing.LIGHTGRAPH_OVERLAY__MOONMODE_COLOR.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_image_processing.LIGHTGRAPH_OVERLAY__MOONMODE_COLOR(class='form-control bg-secondary') }}
+            <div id="LIGHTGRAPH_OVERLAY__MOONMODE_COLOR-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_image_processing.LIGHTGRAPH_OVERLAY__HOUR_COLOR.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -1833,6 +1844,7 @@ const field_names = [
     'LIGHTGRAPH_OVERLAY__DAY_COLOR',
     'LIGHTGRAPH_OVERLAY__DUSK_COLOR',
     'LIGHTGRAPH_OVERLAY__NIGHT_COLOR',
+    'LIGHTGRAPH_OVERLAY__MOONMODE_COLOR',
     'LIGHTGRAPH_OVERLAY__HOUR_COLOR',
     'LIGHTGRAPH_OVERLAY__BORDER_COLOR',
     'LIGHTGRAPH_OVERLAY__NOW_COLOR',
