--- a/indi_allsky/flask/templates/index_img.html
+++ b/indi_allsky/flask/templates/index_img.html
@@ -164,8 +164,8 @@ $( document ).ready(function() {
 <div class="row">
     <div class="text-muted text-center" id="message">Loading...</div>
 </div>
-<div class="row">
-    <div class="text-center">
+<div class="row h-100 align-items-center">
+    <div class="col-12 text-center">
         <img id="latest-image" class="fit">
     </div>
 </div>
