--- a/indi_allsky/flask/templates/loop_img.html
+++ b/indi_allsky/flask/templates/loop_img.html
@@ -238,8 +238,8 @@ $( document ).ready(function() {
 <div class="row">
     <div class="text-muted text-center" id="message"></div>
 </div>
-<div class="row">
-    <div class="text-center">
+<div class="row h-100 align-items-center">
+    <div class="col-12 text-center">
         <img id="loop-image" class="fit">
     </div>
 </div>
