--- a/indi_allsky/flask/templates/loop_img.html
+++ b/indi_allsky/flask/templates/loop_img.html
@@ -26,6 +26,7 @@
     width: auto;
     height: auto;
     object-fit: contain;
+    margin-bottom: 5%;
 }
 </style>
 <script type="text/javascript">
