--- a/indi_allsky/flask/templates/index_img.html
+++ b/indi_allsky/flask/templates/index_img.html
@@ -11,6 +11,7 @@
     width: auto;
     height: auto;
     object-fit: contain;
+    margin-bottom: 5%;
 }
 </style>
 <script type="text/javascript">
