increase max container size to 2000px

--- a/indi_allsky/flask/templates/base.html
+++ b/indi_allsky/flask/templates/base.html
@@ -8,6 +8,12 @@
 <link href="{{ url_for('indi_allsky.static', filename='css/style.css') }}" rel="stylesheet">
 <script src="{{ url_for('indi_allsky.static', filename='js/jquery-3.7.1.min.js') }}"></script>
 <script src="{{ url_for('indi_allsky.static', filename='bootstrap/bootstrap.bundle.min.js') }}"></script>
+<style>
+.container{
+    max-width: 2000px;
+}
+</style>
+
     {% block head %}{% endblock %}
   </head>
   <body class="bg-dark bg-opacity-75">
