--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4803,7 +4803,7 @@ var camera_id = {{ camera_id }};
                 <div id="FILETRANSFER__UPLOAD_LATEST_VIDEO-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8">Enable Allsky Latest Timelapse uploads:  Timelapse Videos, Keograms, Startrails</div>
+        <div class="col-sm-8">Enable Allsky Latest Timelapse uploads:  Timelapse Videos, Keograms, Startrails, Panorama Timelapses</div>
     </div>
 
 </div><!-- end filetransfer tab -->
