--- a/indi_allsky/flask/templates/realtime_keogram.html
+++ b/indi_allsky/flask/templates/realtime_keogram.html
@@ -5,9 +5,12 @@
 {% block head %}
 <meta charset="UTF-8">
 <style>
-canvas {
-    width: 100%;
+.fit {
+    max-width: 100%;
+    max-height: 80vh;
+    width: auto;
     height: auto;
+    object-fit: contain;
 }
 </style>
 <script type="text/javascript">
@@ -23,7 +26,18 @@ function init() {
 }
 
 function loop() {
+    img = new Image();
+    img.onload = function() {
+        $('#message').empty();
+
+        $('#keogram-image').attr({
+            'src': this.src,
+        });
+    };
+
+
     showImage(url);
+
 
     $('#download').html(
         $('<a />', {
@@ -45,34 +59,6 @@ function loop() {
 
 function showImage(url) {
     console.log('Showing image ' + url);
-
-    var canvas = document.getElementById("canvas");
-    var context = canvas.getContext("2d");
-
-    img = new Image();
-    img.onload = function() {
-        $('#message').empty();
-
-        canvas.setAttribute("width", window.innerWidth);
-        canvas.setAttribute("height", window.innerHeight);
-
-        var hRatio = canvas.width  / this.width;
-        var vRatio = canvas.height / this.height;
-        var ratio  = Math.min ( hRatio, vRatio );
-
-        //canvas.width = this.width * ratio;
-        //canvas.height = this.height * ratio;
-
-        var centerShift_x = ( canvas.width - this.width * ratio ) / 2;
-        var centerShift_y = ( canvas.height - this.height * ratio ) / 2;
-
-        //context.imageSmoothingEnabled = false;
-        context.drawImage(this, 0, 0, this.width, this.height,
-            centerShift_x, centerShift_y, this.width * ratio, this.height * ratio);
-
-    };
-
-
     img.src = url + "?t=" + new Date().getTime();
 }
 
@@ -132,7 +118,7 @@ function closeFullscreen() {
 
 
 $( document ).ready(function() {
-    $('#canvas').on("click", function() {
+    $('#keogram-image').on("click", function() {
         goFullscreen(this);
     });
 
@@ -143,17 +129,19 @@ $( document ).ready(function() {
 {% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="text-muted text-center" id="message">Loading...</div>
-</div>
-<div class="row">
-    <div class="text-center">
-        <canvas id="canvas"></canvas>
-    </div>
-</div>
-<div class="row">
-    <div class="text-center">
-        <span id="download"></span>
+<div class="container h-100">
+    <div class="row h-100 align-items-center">
+        <div class="col-12 text-center">
+            <div class=text-muted" id="message">
+                Loading...
+            </div>
+
+            <img id="keogram-image" class="fit">
+
+            <div style="margin-top: 20px;">
+                <div id="download"></div>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
